include/altdss/capi/dss.h

    /*! 
    Zmag (ohms) for Reduce Option for Z of short lines
    */
    ALTDSS_CAPI_DLL double ReduceCkt_Get_Zmag(void);
    ALTDSS_CAPI_DLL void ReduceCkt_Set_Zmag(double Value);
    /*! 
    Keep load flag (T/F) for Reduction options that remove branches
    */
    ALTDSS_CAPI_DLL uint16_t ReduceCkt_Get_KeepLoad(void);
    ALTDSS_CAPI_DLL void ReduceCkt_Set_KeepLoad(uint16_t Value);
    /*! 
    Edit String for RemoveBranches functions
    */
    ALTDSS_CAPI_DLL const char* ReduceCkt_Get_EditString(void);
    ALTDSS_CAPI_DLL void ReduceCkt_Set_EditString(const char* Value);
    /*! 
    Start element for Remove Branch function
    */
    ALTDSS_CAPI_DLL const char* ReduceCkt_Get_StartPDElement(void);
    ALTDSS_CAPI_DLL void ReduceCkt_Set_StartPDElement(const char* Value);
    /*! 
    Name of EnergyMeter to use for reduction
    */
    ALTDSS_CAPI_DLL const char* ReduceCkt_Get_EnergyMeter(void);
    ALTDSS_CAPI_DLL void ReduceCkt_Set_EnergyMeter(const char* Value);
    /*! 
    Save present (reduced) circuit
    Filename is listed in the Text Result interface
    */
    ALTDSS_CAPI_DLL void ReduceCkt_SaveCircuit(const char* CktName);
    /*! 
    Do Default Reduction algorithm
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoDefault(void);
    /*! 
    Do ShortLines algorithm: Set Zmag first if you don't want the default
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoShortLines(void);
    /*! 
    Reduce Dangling Algorithm; branches with nothing connected
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoDangling(void);
    /*!
    Break (disable) all the loops found in the active circuit.

    Disables one of the Line objects at the head of a loop to force the circuit to be radial.
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoLoopBreak(void);
    /*!
    Merge all parallel lines found in the circuit to facilitate its reduction.
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoParallelLines(void);
    /*!
    Merge Line objects in which the IsSwitch property is true with the down-line Line object.
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoSwitches(void);
    /*!
    Remove all 1-phase laterals in the active EnergyMeter's zone.

    Loads and other shunt elements are moved to the parent 3-phase bus.
    */
    ALTDSS_CAPI_DLL void ReduceCkt_Do1phLaterals(void);
    /*!
    Remove (disable) all branches down-line from the active PDElement. 
    
    Circuit must have an EnergyMeter on this branch.
    If KeepLoad=Y (default), a new Load element is defined and kW, kvar are set to present power flow solution for the first element eliminated. 
    The EditString is applied to each new Load element defined. 
    */
    ALTDSS_CAPI_DLL void ReduceCkt_DoBranchRemove(void);